--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -4,8 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -14,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
