--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,8 @@ PORT = 3001
 MONGO_URL = mongodb+srv://pranavbedi6:HePaj9j1QpC0OTcw@cluster0.k0ungut.mongodb.net/
 SECRET = SECr3t
 NODE_ENV = production
+ORIGIN_1 = https://coursera-hbsu.vercel.app/
+ORIGIN_2 = https://coursera-hbsu.vercel.app/
 
 SIGNUP_ADMIN_ROUTE = /signup
 SIGNIN_ADMIN_ROUTE = /signin 
