--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -13,12 +13,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.21.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
