--- a/admin-client/package.json
+++ b/admin-client/package.json
@@ -10,17 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fvilers/disable-react-devtools": "^1.3.0",
-    "@mui/icons-material": "^5.15.5",
-    "@mui/material": "^5.13.7",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/system": "^5.15.15",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.4.0",
+    "clsx": "^2.1.0",
     "cookie-parser": "^1.4.6",
+    "cookies-next": "^4.1.1",
+    "framer-motion": "^11.0.28",
+    "js-cookie": "^3.0.5",
+    "next": "^14.2.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.21.3",
-    "recoil": "^0.7.7"
+    "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
