--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 3001
-MONGO_URL = mongodb+srv://pranavbedi6:HePaj9j1QpC0OTcw@cluster0.k0ungut.mongodb.net/
+MONGO_URL = mongodb+srv://pranavbedi6:VC6nONzm63HCM232@cluster8.efktq8e.mongodb.net/
 SECRET = SECr3t
 NODE_ENV = production
 ORIGIN_1 = https://coursera-hbsu.vercel.app/
